@@ -1,5 +1,8 @@
 {{$NEXT}}
-
+  - Start implementing Mojo::Promise, drop support for Mojolicious <7.53
+  - Implement DEBUG on Client as suggested in #11
+  - Fix query parameter naming in Publisher
+  - Fix missing imports in Publisher #15
 0.0.9 2017-02-18T11:07:56Z
   - Proper implementation of URI parser PR#8 & #9
   - Support for query parameter with aliases
